# ChecksumHash

./: CMakeLists.txt  Doxyfile  README.md
app/: CMakeLists.txt  table_gen_crc16.c  table_gen_crc32.c  table_gen_crc8.c  test_SDBM_hash.c  test_crc16.c  test_crc32.c  test_crc8.c  test_hash.c
include/: checksums.h  crc16.h  crc32.h  crc8.h  fnv.h  hashes.h  sdbm.h  sum8.h
src/: checksums.c  crc16.c  crc32.c  crc8.c  crc_common.h  fnv.c  hashes.c  sdbm.c  sum8.c
